applications/p2p-gateway/manifest/deployment.yaml
---
apiVersion: apps/v1
# TODO: 1. Is this required to be a stateful set? The only item implying that it could be stateful is the
# instanceId parameter which is used to instance the servers? Is this required at all?
# tl;dr pets vs cattle.
kind: StatefulSet
metadata:
  name: p2p-gateway
  labels:
    app: p2p-gateway
spec:
  replicas: 1
  template:
    metadata:
      name: p2p-gateway
      labels:
        app: p2p-gateway
    spec:
      imagePullSecrets:
        - name: "image-pull-secret"
      containers:
        - name: p2p-gateway
          image: corda-os-docker-dev.software.r3.com/corda-os-p2p-gateway:latest
          imagePullPolicy: IfNotPresent
          command: [
            # TODO: 2. Enable SSL for Kafka? Using
            # This is sufficient for now, since transport within the K8s vnet is secure - however
            # this is not the only use case. We might want to connect to kafka is a seperate cluster, or KaaS (ie. external).
              "java", "-jar",
              "-Dbootstrap.servers=$BOOTSTRAP_SERVER",
              "-Dconfig.topic.name=$CONFIG_TOPIC_NAME",
              "-Dmessaging.topic.prefix=$MESSAGE_TOPIC_PREFIX",
              "/opt/override/p2p-gateway.jar",
          ]
      restartPolicy: Always
  selector:
    matchLabels:
      app: p2p-gateway
  serviceName: p2p-gateway
  updateStrategy:
    type: RollingUpdate
