applications/p2p-gateway/manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: p2p-gateway
spec:
  selector:
    app: p2p-gateway
  ports:
    - name: https
      port: 443
      targetPort: 8888
  type: ClusterIP
